--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "repository": "https://github.com/yooji0415/boiler_plate.git",
   "author": "yooji0415 <gch05406@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack serve --config webpack.dev.js --node-env development",
+    "start:build": "webpack --config webpack.prod.js --node-env production && cd build && npx serve ",
+    "build": "webpack --config webpack.prod.js --node-env production",
+    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,md}\""
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -21,8 +28,18 @@
     "@svgr/webpack": "^6.5.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "babel-loader": "^9.1.2",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.4",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.8.3",
     "react-refresh": "^0.14.0",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
